<resources>
    <string name="app_name">Messenger</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_image">App Icon</string>
    <string name="error_generic">Something is not right, we\'ll fix this shortly.</string>
    <string name="tab_featured">FEATURED APPS</string>
    <string name="tab_news">NEWS</string>
    <string name="tab_fast_browsing">FAST BROWSING</string>
    <string name="app_desc">All-in-one Messenger App</string>
    <string name="facebook">Facebook</string>
    <string name="sale_info">50% off on Shopping</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="header_social_apps">Social Media</string>
    <string name="header_shopping">Shopping</string>
    <string name="total_launch_count_menu">%dx</string>
    <string name="total_launch_count_menu_desc">Total launch count</string>
    <string name="share_text">I found this app very useful. Use messenger app to communicate with your friends and family. %s</string>
    <string name="share_text_subject">Checkout this cool new app</string>
    <string name="title_activity_splash">Messenger</string>
    <string name="title_rating">Enjoying using messenger, Rate your experience</string>
    <string name="rate_play_store">Submit</string>
    <string name="clear">Clear app data</string>
    <string name="title_notification">Check all the message</string>
    <string name="desc_notification">All in one messenger app</string>
    <string name="total_launch_count_menu_toast">Total app launches: %dx</string>
    <string name="home_add_id">ca-app-pub-3463246254277621/8029762363</string>
    <string name="featured_add_id">ca-app-pub-3463246254277621/4642726283</string>
    <string name="interstitial_ad_id">ca-app-pub-3463246254277621/7777469169</string>
    <string name="native_ad_id">ca-app-pub-3463246254277621/4139150632</string>
    <string name="chat_curtain_settings">Mask Settings</string>
    <string name="chat_curtain_toggle">Chat Mask</string>
    <string name="chat_curtain_color">Mask Color</string>
    <string name="color_slider">Slider Color</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_url">http://bit.ly/mymessengerapp</string>
    <string name="AD_ID">ca-app-pub-3463246254277621~5543199828"</string>
    <string name="TEST_DEVICE">0FA20932AFE1095798444FD9AAB7D425"</string>
    <string name="publisher_id">pub-3463246254277621</string>
    <string name="gdpr_test_device">539381A767079294612197E301D5476C</string>

    <string name="consent_title">We care about your privacy and data security. We keep this app by showing ads.</string>
    <string name="consent_details">Can we continue to use your data to tailor ads for you?</string>
    <string name="consent_turn_off_label">You can change your choice anytime for Messenger in the app drawer.Our partners will collect ata and use a unique identifier on your device to show you ads.</string>
    <string name="consent_learn_how">Learn how Messenger and our partners collect and use data</string>
    <string name="consent_btn_pos">Yes, continue to see relevant ads</string>
    <string name="consent_btn_neg">No, see ads that are less relevant.</string>
    <string name="nav_privacy_settings">Privacy Settings</string>
    <string name="privacy_policy_url">https://themessengerappprivacypolicy.wordpress.com/"</string>
    <string name="api_url">http://35.154.116.170/</string>
    <string name="explore">Explore</string>
    <string name="app_exit_msg">Please press BACK again to exit</string>

    <string name="installed_app_name">Facebook</string>
    <string name="last_hours">Last 12 hrs</string>
    <string name="no_of_times">6 Times</string>
    <string name="total_hours">10hr 30min</string>
    <string name="app_usage">App usage</string>

    <plurals name="launch_count" formatted="true">
        <item quantity="one">%1$d&#032;time</item>
        <item quantity="other">%1$d&#032;times</item>
    </plurals>

</resources>
