<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/rect_white_round_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="12dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_consent_details"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_content_margin"
        android:gravity="center"
        android:text="@string/consent_title"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/txt_consent_title"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_content_margin"
        android:gravity="center"
        android:text="@string/consent_details"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/txt_consent_turn_off_label"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_content_margin"
        android:gravity="center"
        android:text="@string/consent_turn_off_label"
        android:textSize="11dp" />


    <TextView
        android:id="@+id/txt_consent_learn_how"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_content_margin"
        android:gravity="center"
        android:text="@string/consent_learn_how"
        android:textColor="@color/color_blue"
        android:textSize="11dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_consent_btn_neg"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_content_margin"
            android:layout_weight="1"
            android:background="@drawable/rect_button"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/consent_btn_neg"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txt_consent_btn_pos"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_content_margin"
            android:layout_weight="1"
            android:background="@drawable/rect_button"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/consent_btn_pos"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>