<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ic_app_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_facebook" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/installed_app_name"
            android:textColor="#5d5d5d"
            android:textSize="@dimen/textMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ic_app_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/last_hour_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/last_hours"
            android:textColor="#805d5d5d"
            android:textSize="@dimen/textSmall"
            app:layout_constraintLeft_toLeftOf="@+id/layout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/draw_rect_fill_19248af8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            app:layout_constraintRight_toLeftOf="@+id/divider_V"
            app:layout_constraintTop_toBottomOf="@+id/last_hour_TV">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_times" />

            <TextView
                android:id="@+id/txt_launch_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/no_of_times"
                android:textColor="#004da0"
                android:textSize="@dimen/textSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/total_hours"
                android:textSize="@dimen/textSmall" />

        </LinearLayout>

        <View
            android:id="@+id/divider_V"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/app_details_IV"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/app_details_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/app_details_background"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/app_usage"
                android:textColor="#5d5d5d"
                android:textSize="@dimen/textMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/draw_rect_dots_40000000"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/draw_circle_248af8" />

                    <TextView
                        android:id="@+id/usage_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_of_times"
                        android:textColor="#004da0"
                        android:textSize="@dimen/textSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/draw_circle_248af8" />

                    <TextView
                        android:id="@+id/usage_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_hours"
                        android:textColor="#004da0"
                        android:textSize="@dimen/textSmall" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />


    <!--
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:visibility="gone"
            android:paddingTop="23dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />


            <android.support.constraint.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />


            <ImageView
                android:id="@+id/ic_app_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="22dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_image"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintVertical_bias=".1"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:srcCompat="@drawable/ic_facebook" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="#434343"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_app_icon"
                tools:text="Messenger" />

            <TextView
                android:id="@+id/txt_launch_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:textColor="#0084ff"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_app_name"
                tools:text="1X (50%)" />

        </android.support.constraint.ConstraintLayout>
    -->

</LinearLayout>
